--- a/views/global/macromap.ejs
+++ b/views/global/macromap.ejs
@@ -28,7 +28,7 @@ jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
     backgroundColor: '#d1d5d9',
     selectedColor: null,
-    color: '#a8a8a8',
+    color: '#e9edf2',
     map: 'usa_en',
     borderWidth: 2,
     borderColor: 'black',
