--- a/views/global/micromap.ejs
+++ b/views/global/micromap.ejs
@@ -90,7 +90,7 @@ jQuery(document).ready(function() {
 if(str == "Connecticut Data"){
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+    backgroundColor: '#e9edf2',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
@@ -107,7 +107,7 @@ jQuery(document).ready(function() {
 if(str == "Delaware Data"){
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+    backgroundColor: '#e9edf2',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
@@ -124,7 +124,7 @@ borderColor: 'black',
 if(str == "District of Columbia Data"){
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+    backgroundColor: '#e9edf2',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
@@ -141,7 +141,7 @@ jQuery(document).ready(function() {
 if(str == "Georgia Data"){
 jQuery(document).ready(function() {
    jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+    backgroundColor: '#e9edf2',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
@@ -160,7 +160,7 @@ jQuery(document).ready(function() {
 if(str == "Illinois Data"){
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+    backgroundColor: '#e9edf2',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
@@ -177,7 +177,7 @@ jQuery(document).ready(function() {
 if(str == "Indiana Data"){
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+    backgroundColor: '#e9edf2',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
@@ -194,7 +194,7 @@ jQuery(document).ready(function() {
 if(str == "Iowa Data"){
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+    backgroundColor: '#e9edf2',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
@@ -211,7 +211,7 @@ jQuery(document).ready(function() {
 if(str == "Kansas Data"){
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+    backgroundColor: '#e9edf2',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
@@ -228,7 +228,7 @@ borderColor: 'black',
 if(str == "Kentucky Data"){
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+    backgroundColor: '#e9edf2',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
@@ -245,7 +245,7 @@ jQuery(document).ready(function() {
 if(str == "Louisiana Data"){
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+    backgroundColor: '#e9edf2',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
@@ -262,7 +262,7 @@ jQuery(document).ready(function() {
 if(str == "Maine Data"){
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+    backgroundColor: '#e9edf2',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
@@ -279,7 +279,7 @@ jQuery(document).ready(function() {
 if(str == "Maryland Data"){
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+    backgroundColor: '#e9edf2',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
@@ -296,7 +296,7 @@ jQuery(document).ready(function() {
 if(str == "Massachusetts Data"){
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+    backgroundColor: '#e9edf2',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
@@ -313,7 +313,7 @@ jQuery(document).ready(function() {
 if(str == "Michigan Data"){
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+    backgroundColor: '#e9edf2',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
@@ -330,7 +330,7 @@ jQuery(document).ready(function() {
 if(str == "Minnesota Data"){
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+    backgroundColor: '#e9edf2',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
@@ -347,7 +347,7 @@ jQuery(document).ready(function() {
 if(str == "Missouri Data"){
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+    backgroundColor: '#e9edf2',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
@@ -364,7 +364,7 @@ borderColor: 'black',
 if(str == "Nebraska Data"){
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+    backgroundColor: '#e9edf2',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
@@ -381,7 +381,7 @@ jQuery(document).ready(function() {
 if(str == "Nevada Data"){
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+    backgroundColor: '#e9edf2',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
@@ -398,7 +398,7 @@ jQuery(document).ready(function() {
 if(str == "New Hampshire Data"){
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+    backgroundColor: '#e9edf2',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
@@ -415,7 +415,7 @@ jQuery(document).ready(function() {
 if(str == "New Jersey Data"){
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+    backgroundColor: '#e9edf2',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
@@ -432,7 +432,7 @@ jQuery(document).ready(function() {
 if(str == "New Mexico Data"){
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+    backgroundColor: '#e9edf2',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
@@ -449,7 +449,7 @@ jQuery(document).ready(function() {
 if(str == "New York Data"){
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+    backgroundColor: '#e9edf2',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
@@ -466,7 +466,7 @@ jQuery(document).ready(function() {
 if(str == "North Carolina Data"){
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+    backgroundColor: '#e9edf2',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
@@ -483,7 +483,7 @@ jQuery(document).ready(function() {
 if(str == "Ohio Data"){
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+    backgroundColor: '#e9edf2',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
@@ -500,7 +500,7 @@ jQuery(document).ready(function() {
 if(str == "Oklahoma Data"){
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+    backgroundColor: '#e9edf2',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
@@ -517,7 +517,7 @@ jQuery(document).ready(function() {
 if(str == "Oregon Data"){
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+    backgroundColor: '#e9edf2',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
@@ -534,7 +534,7 @@ jQuery(document).ready(function() {
 if(str == "Pennsylvania Data"){
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+    backgroundColor: '#e9edf2',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
@@ -551,7 +551,7 @@ borderColor: 'black',
 if(str == "Rhode Island Data"){
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+    backgroundColor: '#e9edf2',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
@@ -568,7 +568,7 @@ jQuery(document).ready(function() {
 if(str == "South Carolina Data"){
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+    backgroundColor: '#e9edf2',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
@@ -585,7 +585,7 @@ jQuery(document).ready(function() {
 if(str == "Utah Data"){
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+    backgroundColor: '#e9edf2',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
@@ -602,7 +602,7 @@ jQuery(document).ready(function() {
 if(str == "Vermont Data"){
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+    backgroundColor: '#e9edf2',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
@@ -619,7 +619,7 @@ jQuery(document).ready(function() {
 if(str == "Virginia Data"){
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+    backgroundColor: '#e9edf2',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
@@ -636,7 +636,7 @@ jQuery(document).ready(function() {
 if(str == "Washington Data"){
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+    backgroundColor: '#e9edf2',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
@@ -653,7 +653,7 @@ jQuery(document).ready(function() {
 if(str == "West Virginia Data"){
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+    backgroundColor: '#e9edf2',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
@@ -670,7 +670,7 @@ jQuery(document).ready(function() {
 if(str == "Wisconsin Data"){
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#FFFFFF',
+    backgroundColor: '#e9edf2',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
@@ -708,7 +708,8 @@ var pie = [{
 
 var layout = {
   height: 500,
-  width: 700
+  width: 700,
+  paper_bgcolor: '#e9edf2',
 };
 
 Plotly.newPlot('myDiv', pie, layout);
