--- a/views/micro.ejs
+++ b/views/micro.ejs
@@ -13,7 +13,7 @@
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <script src="https://cdn.plot.ly/plotly-2.6.3.min.js"></script>
   <script src="https://d3js.org/d3.v7.min.js"></script>
-  <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
   <script type="text/javascript" src="dist/jquery.vmap.js"></script>
   <script type="text/javascript" src="dist/maps/jquery.vmap.usa.js" charset="utf-8"></script>
 
