--- a/views/global/macromap.ejs
+++ b/views/global/macromap.ejs
@@ -26,9 +26,9 @@ let index = [
 
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#d1d5d9',
+    backgroundColor: null,
     selectedColor: null,
-    color: '#e9edf2',
+    color: '#a8a8a8',
     map: 'usa_en',
     borderWidth: 2,
     borderColor: 'black',
