--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
 
     <h1>What states are safest?</h1>
     <div id="opening">
-    <p>In our project, we explored deaths by causes such as guns, stabs, poisonings, and suffocatio (aka deaths by unnatural causes) in order to understand in which states you are least likely to meet an untimely death.
+    <p>In our project, we explored deaths by causes such as guns, stabs, poisonings, and suffocation (aka deaths by unnatural causes) in order to understand in which states you are least likely to meet an untimely death.
       The map below depicts the ratio of deaths by unnatural causes: population for each state, with darker colores being higher ratios.
       Note that Maryland has the highest "ratio" of deaths to population and that Rhode Island has the lowest ratio</p>
     </div>
@@ -36,7 +36,7 @@
     <br>
     <li> It makes sense that Rhode Island has such a low ratio as we believe it is known to be a pretty safe place </li>
 </ul>
-  <div id="click">  <p> Click a state for a more detailed summary! </p> </div>
+  <div id="click">  <p> Click a state for a more detailed summary! Please note that states for which there is no data are colored grey. </p> </div>
 
   </header>
 
