--- a/views/micro.ejs
+++ b/views/micro.ejs
@@ -68,7 +68,7 @@
     <%}}}}}%>
 
     <div id="desc">
-    <p> This is the "microdata" for <%= data[myPage].state %>. Here you will find a visualization of the state's death:population ratio as well as a pie chart detailing the methods of death.  </p>
+    <p> This is the "microdata" for <%= data[myPage].state %>. Here you will find a visualization of the state's death: population ratio as well as a pie chart detailing the methods of death.  </p>
     <p> <%= data[myPage].state %> has a total population of <%= data[myPage].population %> </p>
 
 
@@ -79,12 +79,17 @@
       <p> The most common method of death by unnatural causes for <%= data[myPage].state %> is by <%=  method %> , which is interesting because the most common method (aka macroaverage)for all states is a  firearm. </p>
     <%}%>
 
-    <%if(data[myPage].ratio < avg_rates){%>
-      <p> <%= data[myPage].state %> has a lower rate of death by unnatural causes than the national average (aka macroaverage) of 0.0235 % with a deaths: population ratio of  <%=data[myPage].ratio %>: 1 . The difference between the rates is This means that it is one of the SAFEST states with only <%=Math.round((100*data[myPage].ratio)/avg_rates)%> % the average deaths!!</p>
+    <%if(Math.round((100*data[myPage].ratio)/avg_rates) < 90){%>
+      <p> <%= data[myPage].state %> has a lower rate of death by unnatural causes than the national average (aka macroaverage) of 0.0235 % with a deaths: population ratio of  <%=Math.round(100* data[myPage].ratio*10000)/10000 %> % .  This means that it is one of the SAFEST states with only <%=Math.round((100*data[myPage].ratio)/avg_rates)%> % the average deaths!!</p>
       <%}%>
-      <%if(data[myPage].ratio >= avg_rates){%>
-        <p> <%= data[myPage].state %> has a greater rate of death by unnatural causes than the national average (aka macroaverage) of 0.0235 % with a deaths: population ratio of  <%=data[myPage].ratio %>: 1 . Unfortunately, this means it is NOT a very SAFE state with <%=Math.round((100*data[myPage].ratio)/avg_rates)%> % the average deaths. </p>
+      <%if(Math.round((100*data[myPage].ratio)/avg_rates) > 110){%>
+        <p> <%= data[myPage].state %> has a greater rate of death by unnatural causes than the national average (aka macroaverage) of 0.0235 % with a deaths: population ratio of <%=Math.round(100* data[myPage].ratio*10000)/10000 %> % . Unfortunately, this means it is NOT a very SAFE state with <%=Math.round((100*data[myPage].ratio)/avg_rates)%> % the average deaths. </p>
         <%}%>
+
+        <%if(Math.round((100*data[myPage].ratio)/avg_rates) >= 90){%>
+          <%if(Math.round((100*data[myPage].ratio)/avg_rates) <= 110){%>
+          <p> <%= data[myPage].state %> has a greater rate of death by unnatural causes than the national average (aka macroaverage) of 0.0235 % with a deaths: population ratio of <%=Math.round(100* data[myPage].ratio*10000)/10000 %> % . This means that it is a relatively AVERAGELY SAFE state with <%=Math.round((100*data[myPage].ratio)/avg_rates)%> % the average deaths. </p>
+          <%}}%>
 </div>
 
 
